# ChessDecoder

./: .gitignore  .gitmodules  README.md  dump.csv  pyproject.toml  reconstitue_games.py  reconstitute_games.py  specs.md
.claude/: CLAUDE.md
.github/workflows/: tests.yml
chessdecoder/agent/: config_pretrain.yaml  config_stageA.yaml  grammar.py  model.py  oracle.py  patch_vocab.py  pretrain.py  tasks.py
chessdecoder/cpp/v2/: bindings.cpp  board_forward.cpp  board_forward.hpp  mcts_v2.cpp  mcts_v2.hpp  pyproject.toml  setup.py  vocab_v2.cpp  vocab_v2.hpp
chessdecoder/dataloader/: data.py  encoder_loader.py  loader.py  loader_v2.py  reconstitute_games.py  sampling.py  sequence_v2.py
chessdecoder/eval/: bagz.py  cpl.py  elo_eval.py  elo_eval_n.py  engine.py  play_move.py  stats.py  tactics.py
chessdecoder/export/: backbone_causal.py  common.py  export_torchscript.py  export_v2.py
chessdecoder/finetune/: config.yaml  config_v2.yaml  cpp_eval.py  cpp_eval_worker.py  data.py  dump_sequences.py  generate_variations.py  loader.py  loader_v2.py  train.py  train_v2.py
chessdecoder/inference/: think.py
chessdecoder/mcts/: __init__.py
chessdecoder/mcts_v2/: __init__.py
chessdecoder/models/: encoder.py  layers.py  model.py  moe.py  policy_head.py  pos_variants.py  value_buckets.py
chessdecoder/rl/: config.py  (+9 more)
cpp/: bindings.cpp  inference.cpp  main.cpp
docs/: cpp-inference-engine.md  cpp_engine_rewrite_plan.md
experiments/: README.md  curve.py  grad_flow.py  overfit_probe.py  router_analysis.py
finetune/: config.yaml  data.py  dump_sequences.py  loader.py  train.py
markdowns/: 01-architecture-overview.md  01-search-agent-plan.md  02-vocabulary-and-tokenization.md  03-data-pipeline.md  04-decoder-training.md  05-model-architecture.md  06-evaluation-and-inference.md  07-known-issues-and-improvements.md  08-quick-reference.md  09-finetuning-thinking-variations.md  10-rl-grpo-training.md  11-v2-architecture-plan.md  12-v2-wdl-reshape.md
scripts/: analyze_board_errors.py  analyze_probes.py  bench_batched_throughput.py  bench_decoder_engine.py  bench_fp8.py  bench_fp8_4090.py  benchmark_moe_scale.py  brawl.py  check_padding.py  compare_polloss.py  compare_q_values.py  convert_chessfens.py  debug_960_gap.py  debug_acc_temp0.py  debug_batched_acc.py  debug_batched_after_board.py  debug_token_trace.py  debug_var_pt_gap.py  decoder_golden.py  download_and_convert_pretraining_data.sh  download_more_lc0.sh  download_more_lc0_par.sh  download_puzzles.sh  estimate_move_tokens.py  eval_agent_rl.py  eval_bt4_vs_stockfish.py  eval_cpl.py  eval_cpp_pretrain.py  eval_elo_leela.py  eval_elo_mcts.py  eval_elo_nonthinker.py  eval_elo_root.py  eval_elo_thinking.py  eval_leela_vs_sf2000.py  eval_pt_var_acc.py  eval_puct_vs_stockfish.py  eval_root_vs_thinking.py  eval_stageA_quality.py  eval_tactics.py  eval_transition_accuracy.py  (+53 more)
tests/: conftest.py  example_sequence.py  test_agent_tasks.py  test_agent_vocab.py  test_cpl.py  test_cpp_engine.py  test_data.py  test_dataloader.py  test_engine.py  test_engine_parity.py  test_evaluate_elo.py  test_evaluate_elo_n.py  test_finetune.py  test_inference.py  test_loader.py  test_loader_epoch_resume.py  test_mcts.py  test_memory.py  test_model.py  test_predict_move_custom.py  test_rewards.py  test_rl_engine.py  test_rl_oracle_engine.py  test_rl_qref.py  test_rl_reward_buffer.py  test_rl_sequence.py  test_stats.py  test_tactics.py  test_train_step.py  test_v2_eval_adapter.py  test_v2_export.py  test_v2_finetune.py  test_v2_generate.py  test_v2_loader.py  test_v2_model.py  test_v2_rollout.py  test_v2_sequence.py  test_v2_train_step.py  test_v2_value_buckets.py  test_value_buckets.py  (+1 more)
value_traj_out/: value_elo_traj_sf2500_n200.csv  value_elo_traj_sf2500_n50.csv
(+227 files in other folders)
