[project]
name = "decoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bulletchess>=0.4.0",
    "v2-inference-cpp",
    "numpy>=2.4.0",
    "pyarrow>=22.0.0",
    "pybind11>=3.0.1",
    "python-chess>=1.999",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "torchao>=0.15.0",
    "torchtune>=0.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "pytest>=8.0",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
mcts-leela = ["chessrl-inference-cpp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chessdecoder"]
exclude = [
    "chessdecoder/cpp/**/*.cpp",
    "chessdecoder/cpp/**/*.h",
    "chessdecoder/cpp/**/*.hpp",
    "chessdecoder/cpp/**/*.so",
    "chessdecoder/cpp/**/build/**",
    "chessdecoder/cpp/**/CMakeFiles/**",
    "chessdecoder/cpp/chess-library/**",
]

[tool.uv]
no-build-isolation-package = ["v2-inference-cpp"]

[tool.uv.sources]
chessrl-inference-cpp = { path = "chessdecoder/cpp/mcts", editable = true }
v2-inference-cpp = { path = "chessdecoder/cpp/v2", editable = true }

[tool.pytest.ini_options]
markers = [
    "gpu: requires CUDA GPU",
    "cpp: requires V2 C++ inference engine + exported BoardForward.ts",
]
