[project]
name = "decoder"
version = "0.1.0"
description = "Search agent: RL over a frozen chess oracle (probe-any-board grammar)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bulletchess>=0.4.0",
    "numpy>=2.4.0",
    "pyarrow>=22.0.0",
    "python-chess>=1.999",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "torchao>=0.15.0",
    "torchtune>=0.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chessdecoder"]

[tool.pytest.ini_options]
markers = [
    "gpu: requires CUDA GPU",
]
