[build-system]
requires = ["setuptools>=64", "pybind11>=2.12", "torch>=2.9.1"]
build-backend = "setuptools.build_meta"

[project]
name = "v2-inference-cpp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["pybind11>=2.12", "torch>=2.9.1"]

[tool.setuptools]
py-modules = []
packages = []
